test/cases/compile_errors/zon/struct_dup_field.zon
.{
    .name = 10,
    .name = 20,
}
